--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./style.css">
-	<title>첫번째 과제</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
+
 <body>
-	
-	<script src="./script.js"></script>
+    <div id="container">
+        <!-- 문제(1번) -->
+        <div class="clicked">
+            <div class="box"></div>
+        </div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    <script src="./script.js"></script>
 </body>
+
 </html>
