--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./style.css">
-	<title>첫번째 과제</title>
+	<title>다섯번째 과제</title>
+	<link rel="stylesheet" href="./index.css">
 </head>
 <body>
 	
-	<script src="./script.js"></script>
+	<script src="./index.js"></script>
 </body>
 </html>
